--- a/css/style.css
+++ b/css/style.css
@@ -25,12 +25,25 @@ h4 {
 	font-size: 24px;
 }
 
-blockquote {
-	margin: 20px 60px;
-	font-family: Helvetica, sans-serif;
+nav ul { 
+	width: 100%;
+	background-color: #FFFFFF;
+	margin: 0;
+	padding: 10px;
+	list-style: none; 
+	display: flex;
+	justify-content: center;
 }
 
-header {margin-bottom: 20px;}
+nav li { padding: 10px 30px; }
+
+
+header {margin-bottom: 20px;
+ 	width: 10%;
+ 	display: block;
+  margin-left: auto;
+  margin-right: auto;
+	padding-top: 50px;}
 
 /* ensures that your images stretch the width of their containers */
 img { width: 100%; }
@@ -44,14 +57,31 @@ a:hover { color: black; }
 .grid {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
-	grid-gap: 40px;
-	width: 60%;
+	grid-gap: 10px;
+	width: 80%;
 	margin: auto;
+	padding-top: 100px;
+	line-height: 22px;
 }
 
 .grid div {
 	background-color: #ccc;
 	padding: 20px;
+}
+
+.siteinfo {border-style: solid;
+  border-width: 100px;
+  border-color: transparent;
+}
+
+.maincontent {}
+
+footer {
+	padding-top: 50px;
+}
+
+@media only screen and (min:width: 1024px) {
+	background-color: light-blue;
 }
 /*
 font-family: 'Mansalva', cursive;
