--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,114 @@
 /* Enter your Styles below! */
 
 
+
+
 body { 
 	font-family: Helvetica, sans-serif;
 	font-size: 16px;
 	 }
+
+.portfolio-experiment {
+	margin: auto;
+}
+
+
+.portfolio-experiment a {
+	 color: #6abbe9;
+	 padding: 0.7em calc(0.7em * 1.2);
+	 display: inline-block;
+	 border: 3px solid transparent;
+	 position: relative;
+	 font-size: 1.2em;
+	 cursor: pointer;
+	 letter-spacing: 0.07em;
+	 text-decoration: none;
+}
+ .portfolio-experiment a .text {
+	 font-family: proxima-nova, monospace;
+	 transform: translate3d(0, 0.7em, 0);
+	 display: block;
+	 transition: transform 0.4s cubic-bezier(0.2, 0, 0, 1) 0.4s;
+}
+ .portfolio-experiment a:after {
+	 position: absolute;
+	 content: '';
+	 bottom: -3px;
+	 left: calc(0.7em * 1.2);
+	 right: calc(0.7em * 1.2);
+	 height: 3px;
+	 background: #6abbe9;
+	 transition: transform 0.8s cubic-bezier(1, 0, 0.37, 1) 0.2s, right 0.2s cubic-bezier(0.04, 0.48, 0, 1) 0.6s, left 0.4s cubic-bezier(0.04, 0.48, 0, 1) 0.6s;
+	 transform-origin: left;
+}
+ .portfolio-experiment .line {
+	 position: absolute;
+	 background: #6abbe9;
+}
+ .portfolio-experiment .line.-right, .portfolio-experiment .line.-left {
+	 width: 3px;
+	 bottom: -3px;
+	 top: -3px;
+	 transform: scale3d(1, 0, 1);
+}
+ .portfolio-experiment .line.-top, .portfolio-experiment .line.-bottom {
+	 height: 3px;
+	 left: -3px;
+	 right: -3px;
+	 transform: scale3d(0, 1, 1);
+}
+ .portfolio-experiment .line.-right {
+	 right: -3px;
+	 transition: transform 0.1s cubic-bezier(1, 0, 0.65, 1.01) 0.23s;
+	 transform-origin: top;
+}
+ .portfolio-experiment .line.-top {
+	 top: -3px;
+	 transition: transform 0.08s linear 0.43s;
+	 transform-origin: left;
+}
+ .portfolio-experiment .line.-left {
+	 left: -3px;
+	 transition: transform 0.08s linear 0.51s;
+	 transform-origin: bottom;
+}
+ .portfolio-experiment .line.-bottom {
+	 bottom: -3px;
+	 transition: transform 0.3s cubic-bezier(1, 0, 0.65, 1.01);
+	 transform-origin: right;
+}
+ .portfolio-experiment a:hover .text, .portfolio-experiment a:active .text {
+	 transform: translate3d(0, 0, 0);
+	 transition: transform 0.6s cubic-bezier(0.2, 0, 0, 1) 0.4s;
+}
+ .portfolio-experiment a:hover:after, .portfolio-experiment a:active:after {
+	 transform: scale3d(0, 1, 1);
+	 right: -3px;
+	 left: -3px;
+	 transform-origin: right;
+	 transition: transform 0.2s cubic-bezier(1, 0, 0.65, 1.01) 0.17s, right 0.2s cubic-bezier(1, 0, 0.65, 1.01), left 0s 0.3s;
+}
+ .portfolio-experiment a:hover .line, .portfolio-experiment a:active .line {
+	 transform: scale3d(1, 1, 1);
+}
+ .portfolio-experiment a:hover .line.-right, .portfolio-experiment a:active .line.-right {
+	 transition: transform 0.1s cubic-bezier(1, 0, 0.65, 1.01) 0.2s;
+	 transform-origin: bottom;
+}
+ .portfolio-experiment a:hover .line.-top, .portfolio-experiment a:active .line.-top {
+	 transition: transform 0.08s linear 0.4s;
+	 transform-origin: right;
+}
+ .portfolio-experiment a:hover .line.-left, .portfolio-experiment a:active .line.-left {
+	 transition: transform 0.08s linear 0.48s;
+	 transform-origin: top;
+}
+ .portfolio-experiment a:hover .line.-bottom, .portfolio-experiment a:active .line.-bottom {
+	 transition: transform 0.5s cubic-bezier(0, 0.53, 0.29, 1) 0.56s;
+	 transform-origin: left;
+}
+ 
+
 
 h1, h2, h3, h4 {
 	font-family: Helvetica, sans-serif;
@@ -38,6 +142,9 @@ nav ul {
 nav li { padding: 10px 30px; }
 
 
+
+
+
 header {margin-bottom: 20px;
  	width: 10%;
  	display: block;
@@ -58,30 +165,44 @@ a:hover { color: black; }
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	grid-gap: 10px;
-	width: 80%;
+	width: 100%;
 	margin: auto;
 	padding-top: 100px;
 	line-height: 22px;
 }
 
 .grid div {
-	background-color: #ccc;
+	background-color: #ffffff;
 	padding: 20px;
 }
 
+hr  { 
+	width: 480px; 
+	border-top: 1px solid grey;
+}
+
 .siteinfo {border-style: solid;
-  border-width: 100px;
+  border-width: 110px;
   border-color: transparent;
 }
 
-.maincontent {}
+.maincontent {
+	margin: auto;
+  width: 80%;
+  padding: 10px;
+}
 
 footer {
 	padding-top: 50px;
 }
 
-@media only screen and (min:width: 1024px) {
-	background-color: light-blue;
+@media only screen and (min-width: 1024px) {
+
+	.grid {
+
+		width: 60%;
+
+	}
 }
 /*
 font-family: 'Mansalva', cursive;
