--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,8 @@
 
 body { 
 	font-family: 'Montserrat Alternates', sans-serif;
-	font-size: 14px;
-	color: 858585;
+	font-size: 16px;
+	color: #858585;
 	 }
 
 .portfolio-experiment {
@@ -161,6 +161,14 @@ a {
 	text-decoration: none;
 	 }
 a:hover { color: black; }
+
+.menucontent {
+	display: grid;
+	grid-template-columns: 1fr;
+	width: 70%;
+	margin: auto;
+	padding-top: 50px;
+}
 
 .grid {
 	display: grid;
