--- a/css/style.css
+++ b/css/style.css
@@ -189,11 +189,13 @@ a:hover { color: black; }
 	margin: 250px;
 	margin-top: 100px;
 	line-height: 22px;
+	padding-bottom: 100px;
 }
 
 .grid2 div {
 	background-color: #ffffff;
 	padding: 10px;
+	margin: auto;
 }
 
 .grid div {
